# netasset

./: .dockerignore  .env.example  .env.prod.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: deploy.yml
collectors/: autostart_linux.sh  autostart_macos.sh  autostart_windows.ps1  discovery_agent.conf.example  fritzbox_collector.conf.example  fritzbox_collector.py  install_linux.sh  install_macos.sh  install_windows.ps1  lynis_collector.conf.example  lynis_collector.py  mikrotik_collector.conf.example  mikrotik_collector.py  mikrotik_multi.conf.example  netasset-discovery.service  netasset_api.py  netasset_collector.conf.example  netasset_collector.py  network_discovery_agent.py
dashboard/: index.html  package.json
dashboard/src/: App.tsx
docs/: claude_code_prompts.md  container_integration.md  handbuch.html  handbuch.md  kubernetes.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_auth.py  0003_applications_owners.py  0004_conflict_queue.py  0005_network_gateways.py  0006_network_zones.py  0007_ip_networks.py  0008_last_seen_at.py  0009_asset_snapshots.py  0010_asset_reports.py  0014_cve_kev_flag.py  (+14 more)
scripts/: build_handbuch.py  daily_snapshots.py  deploy.sh  docker_start.sh  import_cves.py  import_kev.py  seed_demo_data.py  server_setup.sh
src/: main.py
tests/: conftest.py  test_api.py  test_cve_impact.py  test_identity.py
(+83 files in other folders)
