[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netasset"
version = "0.1.0"
description = "CMDB & Security Intelligence Platform"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Datenbank
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.3.0",
    "alembic>=1.13.0",

    # Validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Embeddings (lokal, kein API-Key)
    "sentence-transformers>=3.0.0",

    # LLM via OpenRouter (OpenAI-kompatibler Client)
    "openai>=1.30.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",

    # HTTP
    "httpx>=0.27.0",

    # Utils
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "semver>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",       # für TestClient
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
